feat : 모임채팅 업그레이드