@@ -12,6 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,7 +34,17 @@ public class MeetingService {
                 .map(meeting ->
                         new MeetingResponseDTO(
                                 meeting.getName(),
-                                meeting.getRoomId())).toList();
+                                meeting.getRoomId(),
+                                meeting.getHistories()
+                                        .stream()
+                                        .map(meetingHistory ->
+                                                new ChatHistoryResponse(
+                                                        meetingHistory.getSender().getNickname(),
+                                                        meetingHistory.getReadCount(),
+                                                        meetingHistory.getMessage(),
+                                                        meetingHistory.getCreatedAt()))
+                                        .collect(Collectors.toList())))
+                .collect(Collectors.toList());
 
         return meetingResponseDTOS;
     }
